src/test/ui/check-static-values-constraints.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/check-static-values-constraints.rs:65:43
   |
LL |                                           ..SafeStruct{field1: SafeEnum::Variant3(WithDtor),
   |  ___________________________________________^
LL | |
LL | |                                                      field2: SafeEnum::Variant1}};
   | |________________________________________________________________________________^ statics cannot evaluate destructors

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:79:33
   |
LL | static STATIC11: Box<MyOwned> = box MyOwned;
   |                                 ^^^^^^^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:79:37
   |
LL | static STATIC11: Box<MyOwned> = box MyOwned;
   |                                     ^^^^^^^

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/check-static-values-constraints.rs:90:32
   |
LL |     field2: SafeEnum::Variant4("str".to_string())
   |                                ^^^^^^^^^^^^^^^^^

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:95:5
   |
LL |     box MyOwned,
   |     ^^^^^^^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:95:9
   |
LL |     box MyOwned,
   |         ^^^^^^^

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:97:5
   |
LL |     box MyOwned,
   |     ^^^^^^^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:97:9
   |
LL |     box MyOwned,
   |         ^^^^^^^

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:102:6
   |
LL |     &box MyOwned,
   |      ^^^^^^^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:102:10
   |
LL |     &box MyOwned,
   |          ^^^^^^^

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:104:6
   |
LL |     &box MyOwned,
   |      ^^^^^^^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:104:10
   |
LL |     &box MyOwned,
   |          ^^^^^^^

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:111:5
   |
LL |     box 3;
   |     ^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:111:9
   |
LL |     box 3;
   |         ^

error[E0507]: cannot move out of static item `x`
  --> $DIR/check-static-values-constraints.rs:116:45
   |
LL |     let y = { static x: Box<isize> = box 3; x };
   |                                             ^
   |                                             |
   |                                             move occurs because `x` has type `std::boxed::Box<isize>`, which does not implement the `Copy` trait
   |                                             help: consider borrowing here: `&x`

error[E0010]: allocations are not allowed in statics
  --> $DIR/check-static-values-constraints.rs:116:38
   |
LL |     let y = { static x: Box<isize> = box 3; x };
   |                                      ^^^^^ allocation not allowed in statics

error[E0019]: static contains unimplemented expression type
  --> $DIR/check-static-values-constraints.rs:116:42
   |
LL |     let y = { static x: Box<isize> = box 3; x };
   |                                          ^

error: aborting due to 17 previous errors

Some errors have detailed explanations: E0010, E0015, E0019, E0507.
For more information about an error, try `rustc --explain E0010`.
